--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
   padding: 10% 0%;
   font-family: 'Raleway';
-  background-image: url("images/bgg.JPG");
+  background-image: url("images/mee.JPG");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
