modifying work menu

--- a/wrk.html
+++ b/wrk.html
@@ -59,7 +59,7 @@
 						</div>
 					</div>
 				</div>
-				<h2 class="slide__title"><span>Mock Website</span> Bookshelf</h2>
+				<h2 class="slide__title"><span>Font Combination</span> Fonté</h2>
 			</div>
 
 			<nav class="slider__nav">
@@ -102,7 +102,7 @@
 			<div class="content__item" id="content-4">
 				<img class="content__item-img rounded-right" src="images/big/font.png" alt="iMac Content" />
 				<div class="content__item-inner">
-					<h2>Fonte</h2>
+					<h2>Fonté</h2>
 					<h3 style="color:#BF529B">Font Pairing</h3>
 					<p>This single page application helps you pair up fonts to check if they are visually appealing or not! (Utilises Google Fonts)</p>
 						<a href="https://ritheshrohan.github.io/fonte/#/"><button class="btn btn-md btn-success3">Visit Website</button></a>
