Added effect and reduced search text size

--- a/wrk.html
+++ b/wrk.html
@@ -8,7 +8,7 @@
 					<i class="fa fa-angle-double-up " style="font-size:1.4em;" aria-hidden="true"></i>
 		    </a>
 				<h1 class="hugeEmail animated fadeInDown" style=" margin-top:4%; margin-bottom:0px; color:#fff; font-family:'Raleway'">Some projects that i've worked on..</h1>
-				<h3 style="color:#fff; font-family:'Raleway'">Click on the search icon to know more about the project.</h3>
+				<h4 class="animated fadeInDown" style="color:#fff; margin-bottom:0px; font-family:'Raleway'">Click on the search icon to know more about the project.</h4>
 			</center>
 
 		</header>
