--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <br />
     <div class="col-md-6 col-md-offset-3">
       <center>
-      <img src="images/profpic.jpg" class="img-circle animated fadeInDown " />
+      <img src="images/testme.jpg" class="img-circle animated fadeInDown " />
       </center>
       <p class="myDesc animated fadeInDown">
           Web Designer. Web Developer. <br />
@@ -28,7 +28,7 @@
       <br />
       <h1 class="herotext1 animated fadeInUp">What I bring to the table?</h1>
       <br />
-      
+
       <footer>
         <center>
           <a href="#/abtme2" id="abt2">
