Revert "Overhaul Website - Multiple changes. New Work Pages."
This reverts commit 026e57f1658e1a16cea7c498ed97807f0a4a2992.

--- a/mainBody.html
+++ b/mainBody.html
@@ -51,14 +51,14 @@ $( function() {
   <div class="col-md-4 work">
 
     <center>
-      <a class="svg" href="#/workinit">
+      <a class="svg" href="#/work">
       <object>
         <embed class="animated smallsvg fadeInUp" src="svg/repair-tools.svg" width="25%" height:"25%"/>
       </object>
       </a>
     </center>
 
-    <a href="#/workinit"><h2 class="animated smallsvg fadeInUp ">Work</h2></a>
+    <a href="#/work"><h2 class="animated smallsvg fadeInUp ">Work</h2></a>
 
 
   </div>
@@ -87,7 +87,7 @@ $( function() {
 </center> -->
 
 <center>
-<a href="cv.pdf" target="_blank"><button class="btn btn-md btn-info resume animated fadeInUp">Download CV</button></a>
+<a href="resume.pdf" target="_blank"><button class="btn btn-md btn-info resume animated fadeInUp">Résumé</button></a>
 </center>
 
 <!--  End of 3 sections - about,work,contact-->
