--- a/wrk.html
+++ b/wrk.html
@@ -1,110 +1,116 @@
 	<!-- Main container -->
-	<style>
-	h5{
-		padding-left: 5%;
-		padding-right: 5%;
-	}
-	</style>
-
-
 	<div class="container">
 
 		<header>
 			<center>
-				<br /><br />
-		    <a href="#/workinit">
-					<i class="fa fa-angle-double-up animated fadeInDown smallDispArrow" style="font-size:1.4em;" aria-hidden="true"></i>
+				<br />
+		    <a href="#/home">
+					<i class="fa fa-angle-double-up " style="font-size:1.4em;" aria-hidden="true"></i>
 		    </a>
-				<h2 class="hugeEmail animated fadeInDown" style=" margin-top:2%; margin-bottom:0px; color:#fff; font-family:'Raleway'">Some projects that i've worked on..</h2>
-				<h5 class="animated fadeInDown h5botmargin">Click on the projects to be directed to the website</h5>
+				<h1 class="hugeEmail animated fadeInDown" style=" margin-top:4%; margin-bottom:0px; color:#fff; font-family:'Raleway'">Some projects that i've worked on..</h1>
+				<h4 class="animated fadeInDown" style="color:#fff; margin-bottom:0px; font-family:'Raleway'">Click on the search icon to know more about the project.</h4>
 			</center>
 
 		</header>
-
-		<div class="row animated fadeIn workrow">
-
-			<a href="http://warhorse.in/" target="_blank"><div class="col-md-4 liftup">
-				<center>
-
-						<img src="/images/warhorse.png" class="boxImage" />
-						<br />
-						<h3 style="color:white;">Warhorse</h3>
-						<h5><i>Warhorse.com, An educational enterprise helping individuals become the best versions of themselves.</i> </h5>
-						<br />
-
-				</center>
-			</div></a>
-
-			<a href="http://ritheshrohan-com.stackstaging.com/twitteroauth/twitter.php" target="_blank"><div class="col-md-4 liftup">
-			
-									<center>
-
-						<img src="/images/tweetz.png" class="boxImage" />
-						<br />
-						<h3 style="color:white;">EzTweetz</h3>
-						<h5><i>Find 10 Latest tweets of any individual on Twitter using their Twitter handle. </i> </h5>
-						<br />
-				</center>
-
-			</div></a>
-
-			<a href="https://ritheshrohan.github.io/fonte/#/" target="_blank"><div class="col-md-4 liftup">
-				<center>
-
-						<img src="/images/fonte.png" class="boxImage" />
-						<br />
-						<h3 style="color:white;">Fonté</h3>
-						<h5><i>Simple font pairing application to check if 2 fonts go well together or not. </i> </h5>
-						<br />
-				</center>
-
-			</div></a>
-
-
-		</div>
-
-		<div class="row animated fadeIn workrow">
-
-
-			<a href="http://ritheshrohan.github.io/Weather-APP/" target="_blank"><div class="col-md-4 liftup">
-				<center>
-
-						<img src="/images/weather.png" class="boxImage" />
-						<br />
-						<h3 style="color:white;">Weather-App</h3>
-						<h5><i>9-City Weather Panel application providing live weather forecast updates.</i> </h5>
-						<br />
-				</center>
-			</div></a>
-
-			<a href="http://ritheshrohan-com.stackstaging.com/mysql/index.php" target="_blank"><div class="col-md-4 liftup">
-				<center>
-
-						<img src="/images/secret.png" class="boxImage" />
-						<br />
-						<h3 style="color:white;">Secret Diary</h3>
-						<h5><i>A diary to keep your deepest, darkest and most preserved secrets!</i> </h5>
-						<br />
-				</center>
-			</div></a>
-
-			<div class="col-md-4">
-				<center>
-
-						<img src="/images/nda.png" class="boxImage" />
-						<br />
-						<h3 style="color:white;">Non Disclosure Agreement</h3>
-						<h5><i>I've signed NDA's for most of the work i've done. To know more about those projects and how my services can help you, Contact me at <span style="color:white;">ritheshrohan7@gmail.com<span> </i> </h5>
-						<br />
-				</center>
+		<section class="slider animated fadeInDown">
+			<div class="slide slide--current" data-content="content-1">
+				<div class="slide__mover">
+					<div class="zoomer flex-center">
+						<img class="zoomer__image" src="images/thumbs/tweetz.png" style='border-radius:10px;' alt="iPhone" />
+						<div class="preview">
+							<img src="images/thumbs/tweetz.png" style='border-radius:10px;' alt="iPhone app preview" />
+							<div class="zoomer__area zoomer__area--size-2"></div>
+						</div>
+					</div>
+				</div>
+				<h2 class="slide__title"><span>twitter</span> EzTweetz</h2>
+			</div>
+			<div class="slide" data-content="content-2">
+				<div class="slide__mover">
+					<div class="zoomer flex-center">
+						<img class="zoomer__image" src="images/thumbs/weather.png"  style='border-radius:10px;'  alt="iPad Mini" />
+						<div class="preview">
+							<img src="images/thumbs/weather.png"   style='border-radius:10px;' alt="iPad Mini app preview" />
+							<div class="zoomer__area zoomer__area--size-4"></div>
+						</div>
+					</div>
+				</div>
+				<h2 class="slide__title"><span>Meteorology</span> Weather-APP</h2>
+			</div>
+			<div class="slide" data-content="content-3">
+				<div class="slide__mover">
+					<div class="zoomer flex-center">
+						<img class="zoomer__image" src="images/thumbs/secret.png"  style='border-radius:10px;' alt="MacBook" />
+						<div class="preview">
+							<img src="images/thumbs/secret.png"  style='border-radius:10px;' alt="MacBook app preview" />
+							<div class="zoomer__area zoomer__area--size-3"></div>
+						</div>
+					</div>
+				</div>
+				<h2 class="slide__title"><span>Privacy</span> The Secret Diary</h2>
+			</div>
+			<div class="slide" data-content="content-4">
+				<div class="slide__mover">
+					<div class="zoomer flex-center">
+						<img class="zoomer__image" src="images/thumbs/book.png"  style='border-radius:10px;' alt="iMac" />
+						<div class="preview">
+							<img src="images/thumbs/book.png"  style='border-radius:10px;' alt="iMac app preview" />
+							<div class="zoomer__area zoomer__area--size-5"></div>
+						</div>
+					</div>
+				</div>
+				<h2 class="slide__title"><span>Font Combination</span> Fonté</h2>
 			</div>
 
-		</div>	
-		
-		<center><h1>...</h1></center>
-		<br />
-		</div>
+			<nav class="slider__nav">
+				<button class="button button--nav-prev"><i class="icon icon--arrow-left"></i><span class="text-hidden">Previous product</span></button>
+				<button class="button button--zoom"><i class="icon icon--zoom"></i><span class="text-hidden">View details</span></button>
+				<button class="button button--nav-next"><i class="icon icon--arrow-right"></i><span class="text-hidden">Next product</span></button>
+			</nav>
+		</section>
+		<!-- /slider-->
+		<section class="content">
+			<div class="content__item" id="content-1">
+				<img class="content__item-img rounded-right" src="images/big/tweetz.png" alt="Apple Watch Content" />
+				<div class="content__item-inner">
+					<h2>EzTweetz</h2>
+					<h3>One Stop Tweet Collector</h3>
+					<p>The Tweetz app helps you get 10 most recent tweets of anyone on the planet.
+                  Just type in their twitter handle and you're good to go!</p>
+					<a href="http://79.170.44.118/ritheshrohan.com/twitteroauth/twitter.php"><button class="btn btn-md btn-success">Visit Website</button></a>
+				</div>
+			</div>
+			<div class="content__item" id="content-2">
+				<img class="content__item-img rounded-right" src="images/big/weather.png" alt="iPad Mini Content" />
+				<div class="content__item-inner">
+					<h2>Weather-APP</h2>
+					<h3 style="color:#8f7b7b">"If you want to see the sunshine, you have to weather the storm"</h3>
+					<p>Have your own weather panel and monitor weather forecast for 9 different cities across the globe! (Utilizes OpenMapWeatherAPI)</p>
+					<a href="http://ritheshrohan.github.io/Weather-APP/"><button class="btn btn-md btn-success1">Visit Website</button></a>
+				</div>
+			</div>
+			<div class="content__item" id="content-3">
+				<img class="content__item-img rounded-right" src="images/big/secret.png" alt="MacBook Content" />
+				<div class="content__item-inner">
+					<h2>The Secret Diary</h2>
+					<h3 style="color:#8ACA7B">Shhhhhhhhhhhh...</h3>
+					<p>Store your thoughts in your secret diary and continue from where you left the next time! Every Keystroke is safe. Don't worry, even I won't know your secret thanks to MD5 encryption.</p>
+					<a href="http://79.170.44.118/ritheshrohan.com/mysql/index.php"><button class="btn btn-md btn-success2">Visit Website</button></a>
 
+				</div>
+			</div>
+			<div class="content__item" id="content-4">
+				<img class="content__item-img rounded-right" src="images/big/font.png" alt="iMac Content" />
+				<div class="content__item-inner">
+					<h2>Fonté</h2>
+					<h3 style="color:#BF529B">Font Pairing</h3>
+					<p>This single page application helps you pair up fonts to check if they are visually appealing or not! (Utilises Google Fonts)</p>
+						<a href="https://ritheshrohan.github.io/fonte/#/"><button class="btn btn-md btn-success3">Visit Website</button></a>
+				</div>
+			</div>
+			<button class="button button--close"><i class="icon icon--circle-cross"></i><span class="text-hidden">Close content</span></button>
+		</section>
+	</div>
 	<script src="js/classie.js"></script>
 	<script src="js/dynamics.min.js"></script>
 	<script src="js/main.js"></script>
