--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       <img src="images/testme.jpg" class="img-circle animated fadeInDown " />
       </center>
       <p class="myDesc animated fadeInDown">
-          Front End Web Designer &amp; Developer. <br />
+          Web Designer. Web Developer. <br />
           UI/UX Enthusiast. <br />
           CS Undergrad. <br />
           Arctic Monkeys. Red Devils. <br />
