Font issues changed.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   <link rel="stylesheet" type="text/css" href="css/resp.css" />
   <!-- Component styles -->
   <link rel="stylesheet" type="text/css" href="css/component.css" />
+
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:100,300" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300|Lato:300" rel="stylesheet">
+
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
   <link rel="icon"     type="image/png"      href="images/favicon.png">
 
