--- a/work1.html
+++ b/work1.html
@@ -16,7 +16,7 @@
 
 		</header>
 
-		<div class="row animated fadeIn workrow" style="margin-top: 4%;">
+		<div class="row workrow  animated fadeInDown" style="margin-top: 4%;">
 
 			<a href="#/work"><div class="col-md-6 liftup">
 				<center>
@@ -30,7 +30,7 @@
 				</center>
 			</div></a>
 
-			<div class="col-md-6 shakeAnimate">
+			<div class="col-md-6 shakeAnimate  ">
 				<center>
 
 						<img src="/images/design.png" class="boxImageMain" />
