--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-  <h1 class="hugeEmail animated shake">ritheshrsohan7@gmail.com</h1>
+  <h1 class="hugeEmail animated shake" style="color:white;">ritheshrohan7@gmail.com</h1>
 </div>
 </div>
 
