Changed about me Page text

--- a/about2.html
+++ b/about2.html
@@ -31,7 +31,7 @@
       <div class="col-md-6">
         <h2 class="herotext2 animated fadeInRight">RESPONSIVENESS</h2>
         <p class="abt2Desc  animated fadeInRight">
-Simple yet stunning Websites utilizing the Twitter Bootstrap framework for both Mobiles and Desktops.
+Striking Websites with rich User Experiences accessible on both Mobiles and Desktops.
         </p>
       </div>
 
@@ -50,7 +50,7 @@ Simple yet stunning Websites utilizing the Twitter Bootstrap framework for both 
       <div class="col-md-6">
         <h2 class="herotext2  animated fadeInLeft" style="text-align:right;">DESIGN</h2>
         <p class="abt2Desc animated fadeInLeft" style="text-align:right;">
-Traditional User Interface design practices coupled with a touch of awesomeness to produce a multitude of UI mockups for Websites and Mobile Applications .
+Traditional User Interface design practices coupled with aesthetic design principles to make the complex look....well, simple.
         </p>
       </div>
 
@@ -88,7 +88,7 @@ Traditional User Interface design practices coupled with a touch of awesomeness 
               <div class="col-md-6">
                 <h2 class="herotext2  animated fadeInLeft" style="text-align:right;">DESIGN</h2>
                 <p class="abt2Desc animated fadeInLeft" style="text-align:right;">
-        Traditional User Interface design practices coupled with a touch of awesomeness to produce a multitude of UI mockups for Websites and Mobile Applications .
+       Traditional User Interface design practices coupled with aesthetic design principles to make the complex look.... well, simple.
                 </p>
               </div>
 
@@ -120,7 +120,7 @@ Traditional User Interface design practices coupled with a touch of awesomeness 
       <div class="col-md-6 ">
         <h2 class="herotext2  animated fadeInRight">SATISFACTION</h2>
         <p class="abt2Desc  animated fadeInRight">
-  Because at the end of the day, my ultimate goal is to create products which exceed your expectations!
+  Because at the end of the day, my ultimate goal is to create products which exceed your expectations and help your brand reach greater heights!
         </p>
       </div>
 
