resume name update

--- a/mainBody.html
+++ b/mainBody.html
@@ -87,7 +87,7 @@ $( function() {
 </center> -->
 
 <center>
-<a href="cv.pdf" target="_blank"><button class="btn btn-md btn-info resume animated fadeInUp">Download CV</button></a>
+<a href="cv.pdf" target="_blank"><button class="btn btn-md btn-info resume animated fadeInUp">Download Resume</button></a>
 </center>
 
 <!--  End of 3 sections - about,work,contact-->
